class GuessResult:
    def __init__(hits, blows):
        self.hits = hits
        self.blows = blows

    def GetHits():
        return self.hits

    def GetBlows():
        return self.blows
